--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lsw/test-package",
+  "name": "@lswlishiwen/test-package",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
