--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "@lswlishiwen/test-package",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pub": "npm publish --access public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lishiwen100/test-package.git"
   },
-  "keywords": [
-    "test-package"
-  ],
   "author": "lishiwen",
   "license": "ISC",
   "bugs": {
